--- a/tools/noark5-to-rdf/noark5tordf/config.yaml
+++ b/tools/noark5-to-rdf/noark5tordf/config.yaml
@@ -1,21 +1,20 @@
 type_prefix : http://www.arkivverket.no/standarder/noark5/arkivstruktur/
 subject_prefix : http://sesam.io/sys1/
 ObjectElements:
-    arkiv:
-      id: systemID
-      subject_prefix: http://sesam.io/sys1/
-    arkivdel:
-      id: systemID
-    mappe: 
-      id: systemID
-    registrering:
-      id: systemID
+    arkiv: {}
+    arkivdel: {}
+    mappe: {}
+    registrering: {}
     skjerming: 
-      id:
+      id: null
     kassasjon:
-      id:
+      id: null
     korrespondansepart:
-      id:
-    arkivskaper:
-      id: arkivskaperID
+      id: null
+    arkivskaper: {}
+ids:
+    - systemID
+    - arkivskaperID
+input_dir: input
+backup_dir: backup
 output_dir: output
